--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 <title>my hash page</title>
+<script src="sha512.min.js"></script>
+<script src="index.js"></script>
 </head>
 <body>
-    <h1>hello, world</h1>
+    <input type="text" id="in"/>
+    <input type="button" value="compute" onclick="compute();"/>
+    <div id="result"></div>
 </body>
 
 </html>
