--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <meta http-equiv="Expires" content="0" />
 
 <title>my hash page</title>
-<script src="sha512.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="css/jquery-ui.min.css" />
+<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+
+<script src="js/sha512.min.js"></script>
 <script src="index.js"></script>
 </head>
 <body>
