--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <link rel="stylesheet" href="css/jquery-ui.min.css" />
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" href="index.css" />
 
 <script src="js/sha512.min.js"></script>
 <script src="index.js"></script>
 </head>
 <body>
-    <input type="text" id="in"/>
+    <input type="text" id="in" data-clear-btn="true"    />
     <input type="button" value="compute" onclick="compute();"/>
     <div id="result"></div>
 </body>
