--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <link rel="stylesheet" href="css/jquery-ui.min.css" />
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+<link rel='stylesheet' href='css/font-awesome.min.css'/>
 <link rel="stylesheet" href="index.css" />
 
 <script src="js/sha512.min.js"></script>
 <script src="index.js"></script>
 </head>
 <body>
-    <input type="text" id="in" data-clear-btn="true"    />
+    <input type="text" id="in" data-clear-btn="true"/>
+    <i class="fa fa-eye" aria-hidden="true" id='showPassword'></i>
+    
     <input type="button" value="compute" onclick="compute();"/>
     <div id="result"></div>
 </body>
