add eye support

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 <script src="index.js"></script>
 </head>
 <body>
-    <input type="text" id="in" data-clear-btn="true"/>
-    <i class="fa fa-eye" aria-hidden="true" id='showPassword'></i>
-    
+    <div id='divPass'>
+        <input type="text" id="in" data-clear-btn="true"/>
+        <i class="fa fa-eye" aria-hidden="true" id='showPassword'></i>
+    </div>
     <input type="button" value="compute" onclick="compute();"/>
     <div id="result"></div>
 </body>
